other-cel/restrict-node-selection/restrict-node-selection.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-node-selection
  annotations:
    policies.kyverno.io/title: Restrict node selection in CEL expressions
    policies.kyverno.io/category: Sample in CEL 
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.11.0
    kyverno.io/kubernetes-version: "1.26-1.27"
    policies.kyverno.io/description: >-
      The Kubernetes scheduler uses complex logic to determine the optimal placement
      for new Pods. Users who have access to set certain fields in a Pod spec
      may sidestep this logic which in many cases is undesirable. This policy
      prevents users from targeting specific Nodes for scheduling of Pods by
      prohibiting the use of the `nodeSelector` and `nodeName` fields. Note that
      this policy is only designed to work on initial creation and not in background
      mode.
spec:
  validationFailureAction: Audit
  background: false
  rules:
  - name: restrict-nodeselector-and-nodename
    match:
      any:
      - resources:
          kinds:
          - Pod
    celPreconditions:
      - name: "operation-should-be-create"
        expression: "request.operation == 'CREATE'"
    validate:
      cel:
        expressions:
          - expression: "!has(object.spec.nodeSelector)"
            message: Setting the nodeSelector field is prohibited.
          - expression: "!has(object.spec.nodeName)"
            message: Setting the nodeName field is prohibited.
