other-cel/restrict-node-selection/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-node-selection
policies:
- ../restrict-node-selection.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: restrict-node-selection
  resources:
  - default/badpod01
  - default/badpod02
  result: fail
  rule: restrict-nodeselector-and-nodename
- kind: Pod
  policy: restrict-node-selection
  resources:
  - default/goodpod01
  result: pass
  rule: restrict-nodeselector-and-nodename
